# lingo-haskell

./: .gitignore  BUILD.bazel  ChangeLog.md  Dockerfile  LICENSE  README.md  Setup.hs  WORKSPACE  hie.yaml  languages.yml  lingo.cabal
.github/workflows/: haskell.yml
app/: Generate.hs
script/: build-and-upload  update-languages
src/Data/: Languages.hs
src/Data/Languages/: EmbeddedYaml.hs  Templates.hs
test/: Spec.hs
